# exectokens

./: Cargo.toml  LICENSE.md  README.md  dfx.json  log.txt
ref/: cbor.rs  lib copy.rs  lib2.rs  lib3.rs  nft copy.rs
scripts/: build.sh  canvas.sh  deploy.sh  exe.sh  mint.sh  start.sh  wasm-opt
scripts/node/: base64.js  load.js
scripts/programs/: canvas_basic.js  load.js  program_alpha_main.wat  program_alpha_view.wat  program_basic_canvas_bg.wat  program_basic_command_bg.wat  program_basic_main_bg.wat  program_basic_main_command_exec.wat  program_basic_melt_bg.wat  program_basic_view_canvas.wat  program_basic_view_canvas_keys.wat  program_basic_view_command.wat  program_basic_view_command_exec.wat  program_snake_main.wat  program_snake_view.wat
src/nft1_backend/: Cargo.toml
src/nft1_backend/src/: attrs.rs  canister.rs  contents.rs  engine.rs  headers.rs  lib.rs  memory.rs  nft.rs  program.rs  state.rs
src/nft1_core/: Cargo.toml
src/nft1_core/src/: attrs.rs  contents.rs  lib.rs  main.rs  mint.rs  modules.rs  program.rs  utils.rs
src/nft1_core/src/view/: command.rs
src/nft1_front/: .env.example  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/nft1_front/src/: App.tsx  AppReactRouter.tsx  PWABadge.tsx  Ui.tsx  env.ts  main.tsx  sw.ts
src/nft1_front/src/components/blocks/: BlobImage.tsx  CollectionCard.tsx  CommandInteractions.tsx  Layout.tsx  NftCard.tsx  NftDetailsCard.tsx  Tmp.tsx
src/nft1_front/src/components/feature/: CollectionsList.tsx  IdentityContext.tsx  NftDetails.tsx  NftsList.tsx
src/nft1_front/src/components/feature/view/: Canvas.tsx  Command.tsx
src/nft1_front/src/components/layouts/: theme.tsx
src/nft1_front/src/components/ui/: tabs.tsx
src/nft1_front/src/ic/did/: index.ts
src/nft1_front/src/ic/did/nft1_backend/: service.did.d.ts  service.did.js
src/nft1_front/src/ic/lib/: index.ts
src/nft1_front/src/nft/: cache.ts  canister.ts  core.ts  index.ts  store.ts  utils.ts  view.ts
src/nft1_front/src/nft/bindings/core/: index.d.ts  index.js  package.json
src/nft1_front/src/nft/view/: command.ts
src/nft1_front/src/routes/: CollectionsListRoute.tsx  IndexRoute.tsx  NftDetailsRoute.tsx  NftsListRoute.tsx  RootRoute.tsx  links.ts  tree.ts  types.ts
src/nft1_front/src/utils/: index.ts
src/nft1_front/src/wasm/interfaces/smart_nft/: index.d.ts  index.js
src/nft1_front/src/wasm/lib/: index.ts
src/nft1_program_alpha/main/: Cargo.toml  build.sh
src/nft1_program_alpha/main/src/: lib.rs
src/nft1_program_alpha/protocol/: Cargo.toml
src/nft1_program_alpha/protocol/src/: lib.rs
src/nft1_program_alpha/view/: Cargo.toml  build.sh
src/nft1_program_alpha/view/src/: lib.rs
src/nft1_program_basic/main/command_exec/: Cargo.toml  build.sh
src/nft1_program_basic/main/command_exec/src/: lib.rs
src/nft1_program_basic/protocol/: Cargo.toml
src/nft1_program_basic/protocol/src/: lib.rs
src/nft1_program_basic/view/canvas/: Cargo.toml  build.sh
src/nft1_program_basic/view/canvas/src/: lib.rs
src/nft1_program_basic/view/canvas_keys/: Cargo.toml  build.sh
src/nft1_program_basic/view/canvas_keys/src/: lib.rs
src/nft1_program_basic/view/command/: Cargo.toml  build.sh
src/nft1_program_basic/view/command/src/: lib.rs
src/nft1_program_basic/view/command_exec/: Cargo.toml  build.sh
src/nft1_program_basic/view/command_exec/src/: lib.rs
src/program_basic_canvas/: Cargo.toml  build.sh
src/program_basic_canvas/src/: lib.rs
src/program_basic_command/: Cargo.toml  build.sh
src/program_basic_command/src/: lib.rs
src/program_basic_main/: Cargo.toml  build.sh  test.wat
src/program_basic_main/src/: lib.rs
src/program_basic_melt/: Cargo.toml  build.sh
