[workspace]
members = [
  "src/nft1_core",
  "src/nft1_backend",
  "src/program_basic_melt",
  "src/program_basic_main",
  "src/program_basic_canvas",
  "src/program_basic_command",
]
resolver = "2"

[profile.release]
lto = true
opt-level = "s"

[profile.release-module]
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"

[profile.release.package.nft1_backend]
opt-level = 0
