[workspace]
members = [
  "src/nft1_core",
  "src/nft1_backend",
  
  "src/nft1_program_basic/protocol",
  "src/nft1_program_basic/main/command_exec",
  "src/nft1_program_basic/view/canvas",
  "src/nft1_program_basic/view/canvas_keys",
  "src/nft1_program_basic/view/command",
  "src/nft1_program_basic/view/command_exec",

  "src/nft1_program_alpha/protocol",
  "src/nft1_program_alpha/main",
  "src/nft1_program_alpha/view",
  
  "src/nft1_program_snake/main",
  "src/nft1_program_snake/view"
]
resolver = "2"

[profile.release]
lto = true
opt-level = "s"

[profile.release-module]
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"

[profile.release.package.nft1_backend]
opt-level = 0
