[package]
name = "nft1_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
anyhow = "1.0.86"
ciborium = "0.2.2"
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.5"
serde = "1.0.204"
serde_json = "1.0.127"
wasmi = "0.36.0"
wat = "1.215.0"
chrono = "0.4.38"
wasm_component_layer = "0.1.18"
wasmi_runtime_layer = "0.36.0"
