[package]
name = "program_basic_command"
version = "0.1.0"
authors = ["Alex Shelkovskiy <alexshelkov@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
cfg-if = "1.0.0"
panic-halt = "0.2.0"
panic-never = "0.1.0"
wasm-bindgen = "0.2.84"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true


