[package]
name = "program_basic_main"
version = "0.1.0"
authors = ["Alex Shelkovskiy <alexshelkov@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
panic-halt = "0.2.0"
panic-never = "0.1.0"
wasm-bindgen = "0.2.84"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true


